# Practicas_CyA_2425

./: .swp  README.md
Practica_02_Cadenas_y_Lenguajes/: makefile
Practica_03_Expresiones_Regulares/: p03_Cheuk_Kelly_Ng_Pante.aux  p03_Cheuk_Kelly_Ng_Pante.out  p03_Cheuk_Kelly_Ng_Pante.tex  p03_Cheuk_Kelly_Ng_Pante.toc
Practica_04_Expresiones_Regulares_C++/: makefile
Practica_05_Automatas_Finitos_JFLAP/: 1.6.jff  dfa_3.jjf.jff  dfa_7.jff  nfa_1.jff  nfa_2.jff  nfa_3.jff  nfa_4.jff  nfa_6.jff  nfa_7.jff  p05_Cheuk_Kelly_Ng_Pante (1).aux  p05_Cheuk_Kelly_Ng_Pante (1).out  p05_Cheuk_Kelly_Ng_Pante (1).toc  p05_Cheuk_Kelly_Ng_Pante (2).out  p05_Cheuk_Kelly_Ng_Pante.aux  p05_Cheuk_Kelly_Ng_Pante.out  p05_Cheuk_Kelly_Ng_Pante.tex  p05_Cheuk_Kelly_Ng_Pante.toc
Practica_06_Diseño_Implementacion_Simulador_Automatas_Finitos/: makefile
Practica_07_Diseño_Simplificacion_Gramaticas/: ex_10.jff  ex_9jff  p07_Cheuk_Kelly_Ng_Pante (1).aux  p07_Cheuk_Kelly_Ng_Pante (1).tex  p07_Cheuk_Kelly_Ng_Pante.aux  p07_Cheuk_Kelly_Ng_Pante.out  p07_Cheuk_Kelly_Ng_Pante.synctex(busy)  p07_Cheuk_Kelly_Ng_Pante.tex  p07_Cheuk_Kelly_Ng_Pante.toc
Practica_08_Gramaticas_Forma_Normal_Chomsky/: p08_Cheuk_Kelly_Ng_Pante.tgz
Practica_09_Maquinas_Turing_JFLAP/: p09_Cheuk_Kelly_Ng_Pante (2).aux  (+4 more)
Practica_10_Analisis_de_Algoritmos/time/sorting/: CMakeLists.txt
Practica_10_Analisis_de_Algoritmos/time/sorting/include/: merge_sort.hpp  shell_sort.hpp
Practica_10_Analisis_de_Algoritmos/time/sorting/src/: merge_sort.cpp  shell_sort.cpp
Practica_10_Analisis_de_Algoritmos/time/test/: CMakeLists.txt
(+151 files in other folders)
